# sql-debug-env

./: .gitignore  Dockerfile  README.md  app.py  client.py  demo.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks_dataset.json  test_dataset.py
env/: __init__.py  db.py  environment.py  models.py
grader/: __init__.py  grader.py
server/: __init__.py  app.py
tasks/: __init__.py  easy.py  hard.py  medium.py
