[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sql-debug-env"
version = "0.1.0"
description = "OpenEnv-compatible environment for debugging SQL queries against a seeded SQLite database."
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.2",
    "pydantic==2.11.4",
    "openai>=2.7.2",
    "httpx==0.28.1",
    "python-dotenv",
    "requests",
    "openenv-core>=0.2.0",
]
[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["env*", "grader*", "server*", "tasks*"]
