[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sql-debug-env"
version = "1.0.0"
description = "SQL Debugging Gym – OpenEnv RL Environment"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "websockets",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "fastapi",
    "uvicorn[standard]",
    "python-dotenv",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
